--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nuxtjs/vuetify": "1.12.2",
     "@types/card-validator": "7.0.1",
     "@types/vue-the-mask": "0.11.1",
+    "@zoralabs/zdk": "^1.2.6",
     "axios": "0.24.0",
     "card-validator": "8.1.1",
     "cross-env": "7.0.3",
@@ -47,6 +48,7 @@
     "@nuxt/typescript-build": "2.1.0",
     "@nuxtjs/eslint-config-typescript": "8.0.0",
     "@nuxtjs/eslint-module": "3.0.2",
+    "@rarible/sdk": "^0.8.16",
     "@types/lodash": "4.14.177",
     "@types/openpgp": "4.4.18",
     "@types/uuid": "8.3.3",
