--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-nuxt": "3.1.0",
     "eslint-plugin-prettier": "4.0.0",
+    "ethers": "^5.5.3",
     "husky": "7.0.4",
     "jest": "27.4.3",
     "lint-staged": "12.1.2",
